--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <div class="container" id="container">
       <div class="search">
-       
+        <select class="input" name="episodeslist" id="episodeslist">
+         <option value="all">All Episodes</option>
+        </select>
         <input class="input-inset" type="text"  id="searchInput" placeholder="Search">
         <p id="totalData"></p>
       </div>
@@ -20,7 +22,7 @@
       </div>
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
-    <script src="episodes.js"></script>
+    <!-- <script src="episodes.js"></script> -->
 
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
